# qr-localizer

./: .gitattributes  .gitignore  .~lock.results.csv#  CMakeLists.txt  main.cpp  run.sh
data/: data.json  results.csv
data/scripts/: compare.sh  load-json.py  qr_compare.cpp  rename-img.py  test.py  visualize_gt.py
report/: report.tex  run.sh
report/biblio/: bibliography.bib
report/biblio/intro/: intro.ipynb
report/chapters/: bibliography.tex  code.tex  description.tex  legacy.tex  problem.tex  results.tex  solution.tex
report/extra/: title.docx
report/settings/: preamble.tex
src/: qr_localize.cpp  qr_localize.hpp
